# Mandelbrot-C

./: CMakeLists.txt  README.md  main.c  mandelbrot.c  mandelbrot.h
Rect/: rect.c  rect.h
bitmap/: bitmap-copy.c  bitmap-copy.h  bitmap.c  bitmap.h
brot/: brot.c  brot.h
cmake/: FindCairo.cmake
